add a backend to the S.R.I. Yices SMT solver

--- a/satchmo-backends.cabal
+++ b/satchmo-backends.cabal
@@ -19,6 +19,7 @@ Exposed-modules:
         Satchmo.Solver.Minisat
         Satchmo.Solver.Quantor
         Satchmo.Solver.Qube
+        Satchmo.Solver.Yices
 Other-modules:
         Satchmo.Solver.Internal
 hs-source-dirs:	.
